--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h4><strong>== IT's working for me below ==</strong></h4>
-<p>If you just modify the&nbsp;</p>
+<p style="margin: 0;">If you just modify the&nbsp;</p>
 <p style="background:#f6f6f6;padding: 10px;"><code>/usr/share/X11/xkb/symbols/pc</code></p>
-<p>you should use a command like&nbsp;</p>
+<p style="margin: 0;">you should use a command like&nbsp;</p>
 <p style="background:#f6f6f6;padding: 10px;"><code>sudo gedit /usr/share/X11/xkb/symbols/pc</code></p>
-<p>and add the line&nbsp;</p>
+<p style="margin: 0;">and add the line&nbsp;</p>
 <p style="background:#f6f6f6;padding: 10px;"><code>modifier_map Mod3 { Scroll_Lock };</code></p>
 <p style="background:#f6f6f6;padding: 10px;"><code>inside the xkb_symbols "pc105" {</code></p>
-<p><i>Remember to restart or log out-log in. It's enough.</i></p>
+<p style="margin: 0;"><i>Remember to restart or log out-log in. It's enough.</i></p>
 
 <img width="100%" src="https://raw.githubusercontent.com/mamunpro01/How-do-I-enable-Scroll-Lock-enable-keyboard-backlight-in-linux/main/12-04-How-do-I-enable-Scroll-Lock-Ask-Ubuntu.png"/>
