--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h4><strong>== IT's working for me below ==</strong></h4>
+<html>
+<body style="text-align:center;">
+  <h4><strong>== IT's working for me below ==</strong></h4>
 <p style="margin: 0;">If you just modify the&nbsp;</p>
 <p style="background:#f6f6f6;padding: 10px;"><code>/usr/share/X11/xkb/symbols/pc</code></p>
 <p style="margin: 0;">you should use a command like&nbsp;</p>
@@ -9,3 +11,6 @@
 <p style="margin: 0;"><i>Remember to restart or log out-log in. It's enough.</i></p>
 
 <img width="100%" src="https://raw.githubusercontent.com/mamunpro01/How-do-I-enable-Scroll-Lock-enable-keyboard-backlight-in-linux/main/12-04-How-do-I-enable-Scroll-Lock-Ask-Ubuntu.png"/>
+
+</body>
+</html>
